--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "json-server": "json-server --watch ../db.json --port 5000"
   },
   "dependencies": {
+    "@huggingface/inference": "^3.8.1",
+    "@langchain/pinecone": "^0.2.0",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@reduxjs/toolkit": "^2.6.1",
     "firebase": "^11.6.0",
     "formik": "^2.4.6",
